tests/paczka1/small_fuzzy/77085850.err
Error in line 1: WKQICQhkbLu S186 68,6
Error in line 8: A492 S186 7,7
